<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home_24"/>

        <item android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history_24"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>

            <item android:id="@+id/nav_add_friend"
                android:title="@string/nav_add_friend"
                android:icon="@drawable/ic_add_friend"/>

            <item android:id="@+id/nav_chat"
                android:title="@string/nav_chat"
                android:icon="@drawable/ic_chat_bubble"/>

            <item android:id="@+id/nav_my_profile"
                android:title="@string/nav_my_profile"
                android:icon="@drawable/ic_my_profile"/>

            <item android:id="@+id/nav_feedback"
                android:title="@string/nav_feedback"
                android:icon="@drawable/ic_feedback"/>

            <item android:id="@+id/nav_logout"
                android:title="@string/nav_log_out"
                android:icon="@drawable/ic_logout"/>

        </menu>
    </item>

</menu>